chore(clean): remove deleted files from repository